--- a/SoccerLeagueApp/app/src/main/res/layout/activity_second.xml
+++ b/SoccerLeagueApp/app/src/main/res/layout/activity_second.xml
@@ -11,29 +11,14 @@
         layout="@layout/toolbar_activity"
         />
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbarSecond"-->
-<!--        android:layout_width="412dp"-->
-<!--        android:layout_height="82dp"-->
-<!--        android:background="@color/orange"-->
-<!--        android:elevation="4dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="1.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.0" />-->
-
-    <ListView
-        android:id="@+id/lstView"
-        android:layout_width="475dp"
-        android:layout_height="752dp"
-        android:layout_marginEnd="24dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="390dp"
+        android:layout_height="703dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/toolbarSecond"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
