--- a/SoccerLeagueApp/app/src/main/res/layout/toolbar_activity.xml
+++ b/SoccerLeagueApp/app/src/main/res/layout/toolbar_activity.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textView4"
         android:layout_width="47dp"
         android:layout_height="30dp"
-        android:text="Razi"
+        android:text="Dazzle"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:text="500 pts"
+        android:text="700 pts"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
