--- a/AskLolaLingo/app/src/main/res/layout/activity_ask_lola_chat.xml
+++ b/AskLolaLingo/app/src/main/res/layout/activity_ask_lola_chat.xml
@@ -5,15 +5,29 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".AskLolaChat">
 
-    <Button
-        android:id="@+id/btnLogin"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Second Page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageViewLola"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:contentDescription="@string/lola_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
