Update Crossfade effect on Lola

--- a/AskLolaLingo/app/src/main/res/layout/activity_ask_lola_chat.xml
+++ b/AskLolaLingo/app/src/main/res/layout/activity_ask_lola_chat.xml
@@ -24,10 +24,11 @@
         android:contentDescription="@string/lola_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintHorizontal_bias="0.156"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars"
 
-        />
+        app:layout_constraintVertical_bias="0.158"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
