--- a/AskLolaLingo/app/src/main/res/values/colors.xml
+++ b/AskLolaLingo/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="grey">#666666</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="glossyPurple">#7A1EA1</color>
+    <color name="glossyPurpleDark">#4A0054</color>
 </resources>
