--- a/AskLolaLingo/app/src/main/res/layout/activity_ask_lola_chat.xml
+++ b/AskLolaLingo/app/src/main/res/layout/activity_ask_lola_chat.xml
@@ -14,21 +14,36 @@
         android:text="Second Page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022" />
 
     <ImageView
         android:id="@+id/imageViewLola"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="294dp"
+        android:layout_height="265dp"
         android:contentDescription="@string/lola_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
 
-        app:layout_constraintVertical_bias="0.158"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.135"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="403dp"
+        android:layout_height="241dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.111"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewLola"
+        app:layout_constraintVertical_bias="0.554">
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
