--- a/F24_Lecture6/app/src/main/res/layout/fragment_first.xml
+++ b/F24_Lecture6/app/src/main/res/layout/fragment_first.xml
@@ -14,4 +14,10 @@
         android:text="First Fragment"
         android:textColor="#FFFFFF" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
 </FrameLayout>
