--- a/AskLolaLingo/app/src/main/res/layout/fragment_ask_lola_chat.xml
+++ b/AskLolaLingo/app/src/main/res/layout/fragment_ask_lola_chat.xml
@@ -6,21 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".fragments.AskLolaChatFragment">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/messageBox"
         android:layout_marginTop="16dp"
         android:scrollbars="vertical"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/messageBox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+        <ScrollView
+            android:id="@+id/chatScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+
+            <TextView
+                android:id="@+id/chatTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:textSize="16sp"
+                 />
+        </ScrollView>
 
 
-
-        <LinearLayout
+    <LinearLayout
             android:layout_margin="8dp"
             android:id="@+id/messageBox"
             android:layout_width="0dp"
@@ -52,4 +69,6 @@
         />
 
         </LinearLayout>
+
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
