--- a/AskLolaLingo/app/src/main/res/layout/fragment_ask_lola_chat.xml
+++ b/AskLolaLingo/app/src/main/res/layout/fragment_ask_lola_chat.xml
@@ -18,23 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <ScrollView
-            android:id="@+id/chatScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            >
-
-            <TextView
-                android:id="@+id/chatTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textSize="16sp"
-                 />
-        </ScrollView>
+        app:layout_constraintVertical_bias="1.0"/>
 
 
     <LinearLayout
@@ -70,5 +54,4 @@
 
         </LinearLayout>
 
-    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
