Updated message Views for User and Lola

--- a/AskLolaLingo/app/src/main/res/layout/item_lola_message.xml
+++ b/AskLolaLingo/app/src/main/res/layout/item_lola_message.xml
@@ -3,17 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    android:layout_gravity="end"
+    android:layout_gravity="start"
     android:orientation="vertical"
     >
 
     <TextView
         android:id="@+id/messageTextView"
-        android:background="@color/glossyPurple"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:padding="8dp"
+        android:background="@color/glossyPurpleDark"
+        android:textColor="@color/black"
         />
 
 </LinearLayout>
