--- a/DatabaseFun/app/src/main/res/layout/activity_add_car.xml
+++ b/DatabaseFun/app/src/main/res/layout/activity_add_car.xml
@@ -11,14 +11,15 @@
         android:id="@+id/edtMake"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="124dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="enter make"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edtName"
@@ -29,8 +30,9 @@
         android:hint="enter name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtMake"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,6 +43,6 @@
         android:text="Add Car"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtName"
+        app:layout_constraintTop_toBottomOf="@+id/edtName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
