--- a/FetchApp/app/src/main/res/layout/activity_main.xml
+++ b/FetchApp/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,9 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
-        android:layout_height="354dp"
+        android:id="@+id/recyclerView"
+        android:layout_width="413dp"
+        android:layout_height="739dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
