--- a/FetchApp/app/src/main/res/values/themes.xml
+++ b/FetchApp/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.FetchApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.FetchApp" parent="Theme.Material3.DayNight">
+        <item name="colorPrimary">@color/purple</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/purple</item>
     </style>
 
-    <style name="Theme.FetchApp" parent="Base.Theme.FetchApp" />
+    <!-- Main theme that extends the base theme -->
+    <style name="Theme.FetchApp" parent="Base.Theme.FetchApp">
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
+    </style>
 </resources>
